# password-app

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  package.json  skills-lock.json
backend/: .dockerignore  Cargo.toml  Dockerfile.dev
backend/crates/api/: Cargo.toml
backend/crates/api/src/: lib.rs  main.rs  routes.rs  state.rs
backend/crates/api/src/handlers/: auth.rs  health.rs  mod.rs
backend/crates/api/src/middleware/: mod.rs  rate_limit.rs
backend/crates/api/tests/: main.rs
backend/crates/api/tests/handlers/: auth.rs  health.rs  mod.rs
backend/crates/api/tests/middleware/: mod.rs  rate_limit.rs
backend/crates/api/tests/support/: mod.rs
backend/crates/application/: Cargo.toml
backend/crates/application/src/: lib.rs
backend/crates/application/src/ports/: clock.rs  database_probe.rs  id_generator.rs  mod.rs  password_hasher.rs  refresh_token_vendor.rs  session_repository.rs  token_issuer.rs  user_repository.rs
backend/crates/application/src/use_cases/: check_health.rs  login.rs  mod.rs  prelogin.rs  refresh_session.rs  register_user.rs
backend/crates/application/tests/: main.rs
backend/crates/application/tests/support/: mod.rs
backend/crates/application/tests/use_cases/: check_health.rs  login.rs  mod.rs  prelogin.rs  refresh_session.rs  register_user.rs
backend/crates/domain/: Cargo.toml
backend/crates/domain/src/: lib.rs
backend/crates/domain/src/access/: mod.rs
backend/crates/domain/src/identity/: credential_hash.rs  email_address.rs  kdf_params.rs  key_material.rs  mod.rs  session.rs  user_account.rs  user_id.rs
backend/crates/domain/src/shared/: errors.rs  mod.rs
backend/crates/domain/src/vaulting/: mod.rs
backend/crates/domain/tests/: main.rs
backend/crates/domain/tests/identity/: credential_hash.rs  email_address.rs  kdf_params.rs  key_material.rs  mod.rs  session.rs  user_account.rs  user_id.rs
backend/crates/infrastructure/: Cargo.toml
backend/crates/infrastructure/migrations/: 20260712000000_baseline.sql  20260714000000_identity.sql
backend/crates/infrastructure/src/: config.rs  lib.rs
backend/crates/infrastructure/src/persistence/: mod.rs  pool.rs  sqlite_probe.rs  sqlite_session_repository.rs  sqlite_user_repository.rs
backend/crates/infrastructure/src/security/: argon2_password_hasher.rs  jwt_token_issuer.rs  mod.rs  sha256_refresh_token_vendor.rs  system_clock.rs  uuid_id_generator.rs
backend/crates/infrastructure/tests/: main.rs
backend/crates/infrastructure/tests/persistence/: mod.rs  pool.rs  sqlite_probe.rs  sqlite_session_repository.rs  sqlite_user_repository.rs
backend/crates/infrastructure/tests/security/: argon2_password_hasher.rs  jwt_token_issuer.rs  mod.rs  sha256_refresh_token_vendor.rs  system_clock.rs  uuid_id_generator.rs
frontend/: .dockerignore  Dockerfile.dev  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/application/: autoLock.ts  checkServerHealth.ts  lockVault.ts  login.ts  ports.ts  registerUser.ts  unlockVault.ts
frontend/src/domain/: crypto.ts  health.ts
frontend/src/ui/: App.tsx  LockScreen.tsx  LoginForm.tsx  SignupForm.tsx  (+1 more)
scripts/: ci.sh  dev.sh
(+30 files in other folders)
