[package]
name = "api"
version.workspace = true
edition.workspace = true

[dependencies]
application = { workspace = true }
infrastructure = { workspace = true }

anyhow = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
http-body-util = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }
