[package]
name = "infrastructure"
version.workspace = true
edition.workspace = true

[dependencies]
application = { workspace = true }
domain = { workspace = true }

argon2 = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
jsonwebtoken = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
